scripts/nullaway/annotator/url6dc6a3bff8_JasonxJiang_PokemonEvolutionaryAlgorithm_tgz-pJ8-ee_ea_pkg1_EEEA1J8.txt
../annotator/url6dc6a3bff8_JasonxJiang_PokemonEvolutionaryAlgorithm_tgz-pJ8-ee_ea_pkg1_EEEA1J8/src/ee/ea/pkg1/Pokemon.java:68: error: [NullAway] initializer method does not guarantee @NonNull fields primary (line 19), secondary (line 20), circumvent (line 61), battleReady (line 63) are initialized along all control-flow paths (remember to check for exceptions or early returns).
    public Pokemon()
           ^
    (see http://t.uber.com/nullaway )
../annotator/url6dc6a3bff8_JasonxJiang_PokemonEvolutionaryAlgorithm_tgz-pJ8-ee_ea_pkg1_EEEA1J8/src/ee/ea/pkg1/Pokemon.java:189: error: [NullAway] returning @Nullable expression from method with @NonNull return type
        return battleReady.get(searchTerm);
        ^
    (see http://t.uber.com/nullaway )
../annotator/url6dc6a3bff8_JasonxJiang_PokemonEvolutionaryAlgorithm_tgz-pJ8-ee_ea_pkg1_EEEA1J8/src/ee/ea/pkg1/types/Type.java:20: error: [NullAway] initializer method does not guarantee @NonNull fields name (line 15), resistantTypes (line 16), effectiveTypes (line 17), immuneTypes (line 18) are initialized along all control-flow paths (remember to check for exceptions or early returns).
    public Type()
           ^
    (see http://t.uber.com/nullaway )
../annotator/url6dc6a3bff8_JasonxJiang_PokemonEvolutionaryAlgorithm_tgz-pJ8-ee_ea_pkg1_EEEA1J8/src/ee/ea/pkg1/SpecifiedSpecial.java:20: error: [NullAway] @NonNull field primary not initialized
    protected Type primary;
                   ^
    (see http://t.uber.com/nullaway )
../annotator/url6dc6a3bff8_JasonxJiang_PokemonEvolutionaryAlgorithm_tgz-pJ8-ee_ea_pkg1_EEEA1J8/src/ee/ea/pkg1/SpecifiedPhysical.java:18: error: [NullAway] @NonNull field primary not initialized
    protected Type primary;
                   ^
    (see http://t.uber.com/nullaway )
Note: ../annotator/url6dc6a3bff8_JasonxJiang_PokemonEvolutionaryAlgorithm_tgz-pJ8-ee_ea_pkg1_EEEA1J8/src/ee/ea/pkg1/PokemonMoveset.java uses or overrides a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
5 errors
